--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </header>
         <main class="main">
             <article class="normal-login">
-                <h2>위니브에서 여러분의 궁금증을 해결하세요! :)</h2>
+                <h2>위니브에서 여러분의 궁금증을 해결하세요! :-&#41;</h2>
 
                 <form class="form">
                     <label class="a11y-hidden" for="input-id">아이디</label>
